# pruna

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md  feature_request.md
.github/actions/setup-uv-project/: action.yml
.github/workflows/: build.yaml  cpu_tests.yaml  docs.yaml  documentation.yaml  external_contributions_tests.yaml  installation.yaml  internal_contributions_tests.yaml  linting.yaml  package_build.yaml  stale.yaml  tests.yaml
docs/contributions/: adding_algorithm.rst  adding_dataset.rst  adding_metric.rst  contributions_toc.rst  how_to_contribute.rst  open_an_issue.rst  opening_an_issue.rst  telemetry.rst
docs/tutorials/: asr_tutorial.ipynb  asr_whisper.ipynb  cv_cpu.ipynb  diffusion_quantization_acceleration.ipynb  evaluation_agent_cmmd.ipynb  flux_small.ipynb  image_generation.ipynb  index.rst  llm_quantization_compilation_acceleration.ipynb  llms.ipynb  portable_compilation.ipynb  reasoning_llm.ipynb  sana_diffusers_int8.ipynb  sd_deepcache.ipynb  video_generation.ipynb
docs/user_manual/: configure.rst  customize.rst  customize_algorithm.rst  customize_dataset.rst  customize_metric.rst  dataset.rst  evaluate.rst  evaluation.rst  save_load.rst  smash.rst  smash_config.rst  target_modules.rst
docs/utils/: gen_docs.py
src/pruna/: smash.py
src/pruna/algorithms/: pruna_base.py
src/pruna/algorithms/batching/: ws2t.py
src/pruna/algorithms/caching/: deepcache.py  fastercache.py  fora.py  pab.py
src/pruna/algorithms/compilation/: c_translate.py  onediff.py  stable_fast.py  torch_compile.py  utils.py
src/pruna/algorithms/factorizing/: qkv_diffusers.py
src/pruna/algorithms/pruning/: torch_structured.py
src/pruna/algorithms/quantization/: gptq_model.py  half.py  hqq.py  hqq_diffusers.py  huggingface_diffusers_int8.py  huggingface_llm_int8.py  llm_compressor.py  quanto.py  torchao.py
src/pruna/config/: compatibility_checks.py  smash_config.py  target_modules.py
src/pruna/data/: __init__.py  collate.py  pruna_datamodule.py
src/pruna/data/datasets/: prompt.py  text_generation.py
src/pruna/engine/: load.py  model_checks.py  pruna_model.py  save.py  utils.py
src/pruna/engine/handler/: handler_inference.py  handler_transformer.py  handler_utils.py
src/pruna/evaluation/: evaluation_agent.py  task.py
src/pruna/evaluation/metrics/: metric_elapsed_time.py  metric_energy.py  metric_memory.py  metric_torch.py  result.py  utils.py
src/pruna/logging/: filter.py  logger.py
tests/: common.py  conftest.py  fixtures.py
tests/algorithms/: test_combinations.py
tests/algorithms/testers/: __init__.py  base_tester.py  batching.py  caching.py  compilation.py  factorizing.py  kernels.py  pruning.py  quantization.py
tests/config/: test_algorithm_compatibility.py  test_logging.py  test_model_compatibility.py  test_pre_smash_hook.py  test_smashconfig_data.py  test_target_modules.py  test_version_tracking.py
tests/data/: test_datamodule.py
tests/documentation/: test_code_blocks.py  test_readme.py  test_tutorials.py
tests/engine/: test_device.py  test_load.py  test_save.py
tests/evaluation/: test_cmmd.py  test_energy_metrics.py  test_inference_time_metrics.py  test_memory_metrics.py  test_model_architecture_metrics.py  test_registry.py  test_sharpness.py  test_task.py  test_torch_metrics.py
tests/style/: test_docstrings.py  test_license.py
tests/telemetry/: test_metrics.py  test_metrics_integration.py
